--- a/app/templates/main/about.html
+++ b/app/templates/main/about.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row mb-5">
         <div class="col-md-12 text-center">
-            <h1 class="display-4">About Eyes Outside Aviation</h1>
+            <h1 class="display-4">About Next Level Tailwheel</h1>
             <p class="lead">Your Premier Flight Training School</p>
         </div>
     </div>
@@ -17,7 +17,7 @@
                 <div class="card-body">
                     <h2 class="card-title">Our Mission</h2>
                     <p class="card-text">
-                        At Eyes Outside Aviation, our mission is to provide exceptional flight training that empowers aspiring pilots 
+                        At Next Level Tailwheel, our mission is to provide exceptional flight training that empowers aspiring pilots 
                         to achieve their aviation dreams. We are committed to maintaining the highest standards of safety, professionalism, 
                         and educational excellence.
                     </p>
