--- a/app/templates/main/contact.html
+++ b/app/templates/main/contact.html
@@ -69,7 +69,7 @@
                     <div class="mb-4">
                         <h5><i class="fas fa-map-marker-alt text-primary me-2"></i>Location</h5>
                         <p>
-                            Eyes Outside Aviation<br>
+                            Next Level Tailwheel<br>
                             123 Airport Road<br>
                             Anytown, ST 12345<br>
                             United States
