Update email addresses to use nextleveltailwheel.com domain

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -158,7 +158,7 @@
                 </div>
                 <div class="col-md-4">
                     <h5>Contact Us</h5>
-                    <p>Email: info@eyesoutside.com<br>
+                    <p>Email: info@nextleveltailwheel.com<br>
                     Phone: (555) 123-4567</p>
                 </div>
             </div>
