--- a/app/templates/main/contact.html
+++ b/app/templates/main/contact.html
@@ -88,9 +88,9 @@
                     <div class="mb-4">
                         <h5><i class="fas fa-envelope text-primary me-2"></i>Email</h5>
                         <p>
-                            General Inquiries: info@eyesoutside.com<br>
-                            Support: support@eyesoutside.com<br>
-                            Scheduling: schedule@eyesoutside.com
+                            General Inquiries: info@nextleveltailwheel.com<br>
+                            Support: support@nextleveltailwheel.com<br>
+                            Scheduling: schedule@nextleveltailwheel.com
                         </p>
                     </div>
 
